# CustomParser

./: CMakeLists.txt  README.md  TODO.md
doc/: grammar.ebnf  v0.1.ebnf
include/sk/: parser.h  utils.h
include/sk/details/: parser_helper.h
include/sk/scanner/: buffered_input.h  concepts.h  defaults.h  logger.h  output_operators.h  scanner.h  token_map.h  types.h
include/sk/scanner/impl/: scanner.txx
include/sk/scanner/matchers/: combined_matcher.h  float_matcher.h  number_matcher.h  whitespace_matcher.h
include/sk/scanner/matchers/impl/: combined_matcher.txx
include/sk/utils/: buffered_input.h  container_templates.h  enum_map.h  logger.h  output_operators.h
src/: CMakeLists.txt  main.cpp  parser.cpp
src/sk/scanner/: buffered_input.cpp  logger.cpp  output_operators.cpp  token_map.cpp
src/sk/scanner/matchers/: float_matcher.cpp  number_matcher.cpp  whitespace_matcher.cpp
src/sk/utils/: buffered_input.cpp  logger.cpp
test/: CMakeLists.txt
test/parser/non-terminals/: arith_expr.cpp  int.cpp  integer.cpp
test/parser/terminals/: arith_op.cpp  digit.cpp  sign.cpp
test/scanner/: buffered_input.cpp
test/utils/: buffered_input.cpp  parser.h
